refaktoring rc4
